# consulta

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat  run.sh
consulta/: __init__.py  __main__.py  backends.py  config.py  db.py  guard.py  render.py
tests/: conftest.py  test_config.py  test_db.py  test_guard.py  test_render.py
