[project]
name = "consulta"
version = "0.1.0"
description = "Read-only SQL query runner. Connection details from .env; backend-agnostic via SQLAlchemy."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "polars>=1.0,<2",
    "python-dotenv>=1.0",
    "sqlparse>=0.5",
    "oracledb>=2.0",
]

# Extra backends. Install the driver for the backend you use, e.g.
# `uv sync --extra mssql`. Oracle ships in the base deps since it's the
# primary backend today; the rest are wired in config but unverified.
[project.optional-dependencies]
mssql = ["pyodbc>=5.0"]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
]

[project.scripts]
consulta = "consulta.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consulta"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["sqlparse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
